<resources>
    <string name="credits">I would like to dedicate this program to my mother and wife for their unconditional support and leadership and to my kids for their unlimited excitement and energies.
</string>
    <string name="disclaimer">The app "Stress Table US Customary" is developed to validate the design stress values used in the design calculation. The stress value at a given temperature is taken from ASME Section II Part D Table 1-A 2017 Edition for US Customary Unit. Necessary interpolation is implemented to give design stress value at intermediate temperature, where a value is provided in this app as "Nil" it is equivalent to "..." or vice versa.
</string>
    <string name="privacypolicy">This privacy policy has been compiled to better serve those who are concerned with how their \'Personally Identifiable Information\' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.

What personal information do we collect from the people that visit our blog, website or app?
When ordering or registering on our site, as appropriate, you may be asked to enter your name, email address, phone number or other details to help you with your experience.

When do we collect information?
We collect information from you when you register on our site, subscribe to a newsletter, respond to a survey, fill out a form or enter information on our site.

How do we use your information?
</string>
    <string name="subscription">Subscription automatically renews unless auto-renew is turned off at least 24 hours before the end of the current period.
Account will be charged for renewal within 2-hours prior to the end of the current period.
Subscription may be managed by the user manually by turning off the In-App Purchase of user account setting and then purchase the subscription within the app environment when required.
</string>
    <string name="subs1"> Auto-Renewal Subscription at the end of each year (Auto renewal can be turned off by going to Settings -&gt; General -&gt; Restrictions -&gt; In-App Purchases of iOS device at any time)

</string>
    <string name="special_symbol" >&#x2264;</string >
    <string name="about2">This app is developed for quick reference and ease of use for stress value of specified material at given temperature. Every effort has been made to provide an accurate result, in case of discrepancy ASME Code stress values shall prevail.
</string>
    <string name="about1">The app "Stress Table US Customary" is developed to validate the design stress values used in the design calculation. The stress value at a given temperature is taken from ASME Section II Part D Table 1-A 2017 Edition for US Customary Unit. Necessary interpolation is implemented to give design stress value at intermediate temperature, where a value is provided in this app as "Nil" it is equivalent to "..." or vice versa.

</string>
    <string name="aboutUs1">Reliance Engineering and Services (RES) is dedicated to develop computer based tools and apps used in industrial and commercial application. Primarily focus is iOS and Android base application.

Our engineering apps are focused to facilitate engineering judgements, validate values used in the design calculation, generating welding documents, design tools for pressure items build to international code &amp; standards and material procurement.
</string>
    <string name="aboutUs2">
Some of the APP projects underway are, welding documents (WPQ, PQR, WPS), design verification of pressure item, tool to facilitate fabrication, material properties, fitness for service, international codes &amp; standards for pressure application etc.

We also develop apps for commercial client involved in consumer markets. Some of the projects underway are online ordering, inventory management and customized business solution

For inquiry please write to </string>
    <string name="disclaimer1">The app "Stress Table US Customary" is developed to validate the design stress values used in the design calculation. The stress value at a given temperature is taken from ASME Section II Part D Table 1-A 2017 Edition for US Customary Unit. Necessary interpolation is implemented to give design stress value at intermediate temperature, where a value is provided in this app as "Nil" it is equivalent to "..." or vice versa.
</string>
    <string name="disclaimer2">This app is developed for quick reference and ease of use for stress value of specified material at given temperature. This app does not intend to supersede the Code requirement nor to suggest any requirement which is not supported by the Code. User are strongly suggested to do manual check where there is a doubt. Also encourage to contact us for improvement and modification.

Every effort has been made to provide an accurate result, in case of discrepancy ASME Code stress values shall prevail.
</string>
    <string name="disclaimer3">
The app developer or his organization holds no liability for the error or omission or for the consequence of any actions taken on the basis of information provided.

</string>
    <string name="disclaimer4">This app is intended for individuals who purchase it for specified period. Any illegal copying, downloading or mirroring of the app is against copyright and handled accordingly.
</string>
    <string name="app_name">Reliance Engineering</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Powered By\nNeoEd Technologies (Pvt.) Ltd\nwww.neoedtechnologies.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="para">aksljdklasdlkasjd</string>
    <string name="backStr"><![CDATA[<< Back]]></string>
    <string name="nextStr"><![CDATA[NEXT >>]]></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="passive_exercise">Passive Exercise</string>
    <string name="functional_activities">Functional Activities</string>
    <string name="active_exercise">Active Exercise</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string name="my_account">My Account</string>
    <string name="update_an_account">Update Account</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="bilateral_shoulder_flexion_with_both_hands_interlocked">Bilateral Shoulder Flexion with both hands interlocked</string>
    <string name="shoulder_horizontal_abduction">Shoulder Horizontal Abduction</string>
    <string name="shoulder_abduction">Shoulder Abduction</string>
    <string name="elbow_flexion_and_extension">Elbow Flexion and Extension</string>
    <string name="elbow_pronation_and_supination">Elbow Pronation and Supination</string>
    <string name="wrist_flexion_and_extension">Wrist Flexion and Extension</string>
    <string name="extend_elbow">Extend Elbow</string>
    <string name="forearm_to_box">Forearm to Box</string>
    <string name="hand_to_box">Hand to Box</string>
    <string name="stroke_information">Stroke Information</string>
    <string name="excercuse_information">Exercise Progression</string>
    <string name="excercuse_desc">Week 1 : 8-10 repetitions\n\nWeek 2 : 15 repetitionn\n\nWeek 3 : 20 repetitions\n\nWeek 4 : 25-30 repetitions</string>
    <string name="upper_limb_exercise">Upper Limb Exercise</string>
    <string name="lift_can">Lift Can</string>
    <string name="lift_pencil">Lift Pencil</string>
    <string name="stack_checkers">Stack Checkers</string>
    <string name="flip_cards">Flip Cards</string>
    <string name="fold_towel">Fold Towel</string>
    <string name="drinking_water_from_glass">Drinking Water from Glass</string>
    <string name="lifting_glass_of_water_at_90_shoulder_flexion">Lifting Glass of Water at 90° Shoulder Flexion</string>
    <string name="moving_5_crystals_from_table_to_box">Moving 5 Crystals from Table to Box</string>
    <string name="wiping_the_table">Wiping the Table</string>
    <string name="grasping_and_releasing_ball">Grasping and Releasing Ball</string>
    <string name="combing_hair">Combing Hair</string>
    <string name="eating_with_affected_hand">Eating with Affected Hand</string>
    <string name="opening_and_closing_jar">Opening and Closing Jar</string>
    <string name="shoulder_flexion">Shoulder Flexion</string>
    <string name="roms_for_shoulder">ROMs for shoulder</string>
    <string name="roms_for_elbow">ROMs for Elbow</string>
    <string name="roms_for_wrist_fingers_and_thumb">ROMs for wrist, Fingers and Thumb</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="translation">Instructions</string>
    <string name="bilateral_shoulder_flexion_with_both_hands_interlocked_Str">•Patient should be in supine lying position.\n\n\nAsk the patient to clasp/hold the affected hand with the help of unaffected hand.\n\n\nThen flex both shoulders as demonstrated in the video.\n\n\nRepeat this exercise 10 times.\n\n</string>
    <string name="shoulder_horizontal_abduction_str">•Patient should be in supine lying position.\n\n\nAsk the patient to clasp/hold the affected hand with the help of unaffected hand.\n\n\nBring both arms at the level of 90° then move the arms right and left side as demonstrated in the video.\n\n\nRepeat this exercise 10 times.\n\n</string>
    <string name="shoulder_abduction_str">•Patient should be in supine lying position.\n\n\nAsk the patient to abduct the affected arm as demonstrated in the video.\n\n\nRepeat this exercise 10 times.\n\n</string>
    <string name="elbow_flexion_and_extension_str">•Ask the patient to place the affected arm on the table.\n\n\nThen bend (flex) and straighten (extend) the elbow as demonstrated in the video.\n\n\ntKeep your body straight and shoulders back and avoid compensatory movemens of body.\n\n\nRepeat this exercise 10 times.\n\n</string>
    <string name="elbow_pronation_and_supination_str">•Ask the patient to place the affected arm on the table.\n\n\nPerform the pronation and supination of elbow as demonstrated in the video.\n\n\nKeep your body straight and shoulders back and avoid compensatory movements of body.\n\n\nRepeat this exercise 10 times.\n\n</string>
    <string name="wrist_flexion_and_extension_str">•Ask the patient to clasp/hold the affected hand with the help of unaffected hand.\n\n\nThen bend and straighten the wrist as demonstrated in the video.\n\n\nKeep your body straight and shoulders back and avoid compensatory movements of body.\n\n\nRepeat this exercise 10 times.\n\n</string>
    <string name="extend_elbow_str">•Patient should be sitting at the side of the table.\n\n\ntAsk the patien to place affected arm on the table and straighten the elbow sideways as demonstrated in the video.\n\n\nKeep your body straight and shoulders back and avoid compensatory movements of body.\n\n\nRepeat this activity 10 times.\n\n</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="lift_paper_clip">Lift Paper Clip</string>
</resources>