<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        android:layout_above="@+id/layout"
        app:navGraph="@navigation/setting_nav" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="54dp" />

    <LinearLayout
        android:layout_marginBottom="50dp"
        android:id="@+id/layout"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bg"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment"
      >

        <TextView
            android:id="@+id/tvAccount"
            android:gravity="left"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/themeColor"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"></TextView>
        <TextView
            android:id="@+id/tvHome"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/themeColor"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"></TextView>
        <TextView
            android:id="@+id/tvUrdu"
            android:gravity="right"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/themeColor"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"></TextView>
    </LinearLayout>
</RelativeLayout>